--- a/piws/data/cubes.piws.css
+++ b/piws/data/cubes.piws.css
@@ -42,6 +42,15 @@ search_box > input {
     width: 100%;
 }
 
+.btn {
+    margin-left: 0;
+}
+
+.nav-tabs {
+    border-bottom: 1px solid #ddd;
+    margin-bottom: 2em;
+}
+
 
 /* -- Container ----------------------------------------------------------- */
 
